crates/barnum_engine/tests/snapshots/completion_snapshot_tests__completion_snapshots@handle_restart_body.json.snap
---
source: crates/barnum_engine/tests/completion_snapshot_tests.rs
expression: trace
input_file: crates/barnum_engine/tests/completion/handle_restart_body.json
---
--- After advance ---
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Handle {
                    effect_id: EffectId(
                        0,
                    ),
                },
            ),
            ChildRef {
                action: ActionId(
                    3,
                ),
            },
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
            Action(
                Chain {
                    rest: ActionId(
                        5,
                    ),
                },
            ),
            Action(
                Perform {
                    effect_id: EffectId(
                        0,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./handler.ts",
                    ),
                    func: FuncName(
                        "handler",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: None,
                        kind: Handle(
                            HandleFrame {
                                effect_id: EffectId(
                                    0,
                                ),
                                body: ActionId(
                                    3,
                                ),
                                handler: ActionId(
                                    2,
                                ),
                                state: Some(
                                    String("input"),
                                ),
                                status: Suspended(
                                    Chain {
                                        frame_id: Index {
                                            slot: 1,
                                            generation: Generation(1),
                                        },
                                    },
                                ),
                            },
                        ),
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: Some(
                            Handle {
                                frame_id: Index {
                                    slot: 0,
                                    generation: Generation(1),
                                },
                                side: Body,
                            },
                        ),
                        kind: Chain {
                            rest: ActionId(
                                5,
                            ),
                        },
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: Some(
                            Handle {
                                frame_id: Index {
                                    slot: 0,
                                    generation: Generation(1),
                                },
                                side: Handler,
                            },
                        ),
                        kind: Invoke {
                            handler: HandlerId(
                                1,
                            ),
                        },
                    },
                },
            ),
        ],
        len: 3,
        first_free: None,
    },
    task_to_frame: {
        TaskId(
            0,
        ): Index {
            slot: 2,
            generation: Generation(1),
        },
    },
    pending_dispatches: [],
    stashed_items: [],
    next_task_id: 1,
}
Pending: [
    Dispatch {
        task_id: TaskId(
            0,
        ),
        handler_id: HandlerId(
            1,
        ),
        value: Object {
            "payload": String("input"),
            "state": String("input"),
        },
    },
]

--- Completion: task_id=0, value={"kind":"RestartBody","value":"restarted"} ---
Result: None
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Handle {
                    effect_id: EffectId(
                        0,
                    ),
                },
            ),
            ChildRef {
                action: ActionId(
                    3,
                ),
            },
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
            Action(
                Chain {
                    rest: ActionId(
                        5,
                    ),
                },
            ),
            Action(
                Perform {
                    effect_id: EffectId(
                        0,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./handler.ts",
                    ),
                    func: FuncName(
                        "handler",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: None,
                        kind: Handle(
                            HandleFrame {
                                effect_id: EffectId(
                                    0,
                                ),
                                body: ActionId(
                                    3,
                                ),
                                handler: ActionId(
                                    2,
                                ),
                                state: Some(
                                    String("input"),
                                ),
                                status: Suspended(
                                    Chain {
                                        frame_id: Index {
                                            slot: 1,
                                            generation: Generation(2),
                                        },
                                    },
                                ),
                            },
                        ),
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(2),
                    value: Frame {
                        parent: Some(
                            Handle {
                                frame_id: Index {
                                    slot: 0,
                                    generation: Generation(1),
                                },
                                side: Body,
                            },
                        ),
                        kind: Chain {
                            rest: ActionId(
                                5,
                            ),
                        },
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(2),
                    value: Frame {
                        parent: Some(
                            Handle {
                                frame_id: Index {
                                    slot: 0,
                                    generation: Generation(1),
                                },
                                side: Handler,
                            },
                        ),
                        kind: Invoke {
                            handler: HandlerId(
                                1,
                            ),
                        },
                    },
                },
            ),
        ],
        len: 3,
        first_free: None,
    },
    task_to_frame: {
        TaskId(
            1,
        ): Index {
            slot: 2,
            generation: Generation(2),
        },
    },
    pending_dispatches: [],
    stashed_items: [],
    next_task_id: 2,
}
Pending: [
    Dispatch {
        task_id: TaskId(
            1,
        ),
        handler_id: HandlerId(
            1,
        ),
        value: Object {
            "payload": String("restarted"),
            "state": String("input"),
        },
    },
]

--- Completion: task_id=1, value={"kind":"Resume","value":"resumed"} ---
Result: None
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Handle {
                    effect_id: EffectId(
                        0,
                    ),
                },
            ),
            ChildRef {
                action: ActionId(
                    3,
                ),
            },
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
            Action(
                Chain {
                    rest: ActionId(
                        5,
                    ),
                },
            ),
            Action(
                Perform {
                    effect_id: EffectId(
                        0,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./handler.ts",
                    ),
                    func: FuncName(
                        "handler",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Occupied(
                OccupiedEntry {
                    generation: Generation(1),
                    value: Frame {
                        parent: None,
                        kind: Handle(
                            HandleFrame {
                                effect_id: EffectId(
                                    0,
                                ),
                                body: ActionId(
                                    3,
                                ),
                                handler: ActionId(
                                    2,
                                ),
                                state: Some(
                                    String("input"),
                                ),
                                status: Free,
                            },
                        ),
                    },
                },
            ),
            Occupied(
                OccupiedEntry {
                    generation: Generation(3),
                    value: Frame {
                        parent: Some(
                            Handle {
                                frame_id: Index {
                                    slot: 0,
                                    generation: Generation(1),
                                },
                                side: Body,
                            },
                        ),
                        kind: Invoke {
                            handler: HandlerId(
                                0,
                            ),
                        },
                    },
                },
            ),
            Empty(
                EmptyEntry {
                    generation: Generation(2),
                    next_free: None,
                },
            ),
        ],
        len: 2,
        first_free: Some(
            FreePointer(2),
        ),
    },
    task_to_frame: {
        TaskId(
            2,
        ): Index {
            slot: 1,
            generation: Generation(3),
        },
    },
    pending_dispatches: [],
    stashed_items: [],
    next_task_id: 3,
}
Pending: [
    Dispatch {
        task_id: TaskId(
            2,
        ),
        handler_id: HandlerId(
            0,
        ),
        value: String("resumed"),
    },
]

--- Completion: task_id=2, value="b_done" ---
Result: Some(String("b_done"))
WorkflowState {
    flat_config: FlatConfig {
        entries: [
            Action(
                Handle {
                    effect_id: EffectId(
                        0,
                    ),
                },
            ),
            ChildRef {
                action: ActionId(
                    3,
                ),
            },
            Action(
                Invoke {
                    handler: HandlerId(
                        1,
                    ),
                },
            ),
            Action(
                Chain {
                    rest: ActionId(
                        5,
                    ),
                },
            ),
            Action(
                Perform {
                    effect_id: EffectId(
                        0,
                    ),
                },
            ),
            Action(
                Invoke {
                    handler: HandlerId(
                        0,
                    ),
                },
            ),
        ],
        handlers: [
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./b.ts",
                    ),
                    func: FuncName(
                        "b",
                    ),
                },
            ),
            TypeScript(
                TypeScriptHandler {
                    module: ModulePath(
                        "./handler.ts",
                    ),
                    func: FuncName(
                        "handler",
                    ),
                },
            ),
        ],
        workflow_root: ActionId(
            0,
        ),
    },
    frames: Arena {
        storage: [
            Empty(
                EmptyEntry {
                    generation: Generation(1),
                    next_free: Some(
                        FreePointer(1),
                    ),
                },
            ),
            Empty(
                EmptyEntry {
                    generation: Generation(3),
                    next_free: Some(
                        FreePointer(2),
                    ),
                },
            ),
            Empty(
                EmptyEntry {
                    generation: Generation(2),
                    next_free: None,
                },
            ),
        ],
        len: 0,
        first_free: Some(
            FreePointer(0),
        ),
    },
    task_to_frame: {},
    pending_dispatches: [],
    stashed_items: [],
    next_task_id: 3,
}
Pending: []
